# Cuda-Path-Tracing

./: .gitignore  CMakeLists.txt  TODO.md
obj_loader/: base_triangle.h  charholder.h  charholder.test.cpp  main.cpp  obj_parser.h  parser.h  parser.test.cpp
src/: camera.cuh  hitable.h  hitable_list.h  main.cu  material.cuh  quad.h  ray.h  render.h  setup.cuh  sphere.h  triangle.h  vec3.h
